==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed a race condition that could lead to ``KILL (ALL)`` causing queries to
   get stuck instead of interrupting them.

 - Fixed validation so that ``SELECT DISTINCT`` can be used only if there
   is no ``GROUP BY`` present or if the set of ``GROUP BY`` expressions is
   the same as the set ``SELECT`` expressions.

 - Added validation that ``ORDER BY`` symbols are included in the ``SELECT``
   list when ``DISTINCT`` is used.