@@ -22,6 +22,10 @@ Changes
 Fixes
 =====
 
+ - The internal ``fetchSize`` now has an upper bound to prevent ``OutOfMemory``
+   errors if a postgres client retrieves a large result set without setting a
+   ``fetchSize``, or setting a ``fetchSize`` which is too large.
+
  - Fixed a race condition that could lead to ``KILL (ALL)`` causing queries to
    get stuck instead of interrupting them.
 
